--- a/challenges/drum/drum.html
+++ b/challenges/drum/drum.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <<div class="keys">
+  <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
       <span class="sound">clap</span>
